--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,3 +307,13 @@ img{
 .home__scroll-arrow{
     font-size: 1.25rem;
 }
+
+/* === BUTTONS === */
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
+    color: #FFF;
+    padding: 1rem;
+    border-radius: .5rem;
+    font-weight: var(--font-medium);
+}
