--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -281,7 +281,7 @@ img{
 }
 
 .home__scroll{
-    /* display: none; */
+    display: none;
 }
 
 .home__scroll-button{
@@ -289,8 +289,8 @@ img{
     transition: .3s;
 }
 
-.home__scroll-hover{
-    transform: translateY(.25rem);
+.home__scroll-button:hover{
+    transform: translateY(0.25rem);
 }
 
 .home__scroll-mouse{
@@ -316,4 +316,19 @@ img{
     padding: 1rem;
     border-radius: .5rem;
     font-weight: var(--font-medium);
+}
+
+.button:hover{
+    background-color: var(--first-color-alt);
+}
+
+.button__icon{
+    font-size: 1.25rem;
+    margin-left: var(--mb-0-5);
+    transition: .3s;
+}
+
+.button--flex{
+    display: inline-flex;
+    align-items: center;
 }
