--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 
     /* === Colors === */
     /* Change favorite color */
-    --hue-color: 250;
+    --hue-color: 210; /* */
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -109,17 +109,17 @@ img{
     padding: 2rem 0 4rem;
 }
 
-.section_title{
+.section__title{
     font-size: var(--h1-font-size);
 }
 
-.section_subtitle{
+.section__subtitle{
     display: block;
     font-size: var(--small-font-size);
     margin-bottom: var(--mb-3);
 }
 
-.section_title, .section_subtitle{
+.section__title, .section__subtitle{
     text-align: center;
 }
 
@@ -332,3 +332,5 @@ img{
     display: inline-flex;
     align-items: center;
 }
+
+/* === ABOUT === */
